fix margins on mobile

--- a/style.css
+++ b/style.css
@@ -738,7 +738,7 @@ footer img{
   }
 
   .project-body-text{
-    margin: 10%;
+    margin: 5%;
   }
 
 
